--- a/app/scss/_recentProjects.scss
+++ b/app/scss/_recentProjects.scss
@@ -10,34 +10,65 @@
     margin: 0;
     color: #fff;
     padding: 40px 0 10px 0;
+    margin-bottom: 20px;
     width: auto;
     border-bottom: 3px solid #fff;
     font-size: 2rem;
   }
   .project {
     display: flex;
-    justify-content: center;
-    background: #323B42;
+    // background: #323B42;
     color: #fff;
-    padding: 40px;
+    height: 350px;
     width: 100%;
+    position: relative;
+    padding-top: 50px;
+    box-sizing: content-box;
     .left {
-      width: 50%;
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      padding-right: 50px;
+      margin-right: 50px;
+      width: 50%;
+      position: relative;
       h3 {
-        font-weight: normal;
+        font-weight: bold;
+        font-size: 2.5rem;
       }
       p {
-        font-weight: lighter;
+        font-weight: normal;
       }
+      .bottom {
+        position: absolute;
+        bottom: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        button {
+          padding: 20px 60px;
+          background: #1DBB86;
+          margin-bottom: 5px;
+          &:hover {
+            background: darken(#1DBB86, 10%)
+          }
+        }
+        a {
+          font-weight: lighter;
+          font-size: 0.8rem;
+        }
+      }
+
     }
     .right {
-      padding-left: 50px;
       width: 50%;
-      justify-content: flex-start;
+      display: flex;
+      margin-left: 50px;
+      position: relative;
+      img {
+        height: 100%;
+        position: absolute;
+        bottom: 0;
+      }
     }
 
   }
