--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -6,6 +6,10 @@
   animation: 500ms slideOut;
 }
 
+.slide-up {
+  animation: 500ms slideUp;
+}
+
 .bounce-down-center {
   animation: 500ms bounceDownCenter;
 }
@@ -39,6 +43,14 @@
   }
   to {
     transform: translateY(-200%);
+  }
+}
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
   }
 }
 
