--- a/app/scss/_recentProjects.scss
+++ b/app/scss/_recentProjects.scss
@@ -35,20 +35,23 @@
     h3 {
       font-weight: bold;
       font-size: 2.5rem;
+      margin: 40px 0 0 0;
     }
     p {
       font-weight: normal;
+      max-width: 350px;
+      text-align: right;
     }
     .bottom {
       position: absolute;
-      bottom: 10px;
+      bottom: 25px;
       display: flex;
       flex-direction: column;
       align-items: center;
       button {
-        padding: 20px 60px;
+        padding: 20px 80px;
         background: #1DBB86;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
         &:hover {
           background: darken(#1DBB86, 10%)
         }
@@ -56,6 +59,9 @@
       a {
         font-weight: lighter;
         font-size: 0.8rem;
+        i {
+          margin: 0 5px;
+        }
       }
     }
 
@@ -66,7 +72,7 @@
     margin-left: 50px;
     position: relative;
     img {
-      height: 100%;
+      max-height: 100%;
       position: absolute;
       bottom: 0;
     }
