--- a/app/scss/_recentProjects.scss
+++ b/app/scss/_recentProjects.scss
@@ -17,6 +17,13 @@
   }
 }
 
+.recent-projects-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 .project {
   display: flex;
   color: #fff;
@@ -32,15 +39,30 @@
     margin-right: 50px;
     width: 50%;
     position: relative;
+    order: 1;
+    img {
+      max-height: 100%;
+      position: absolute;
+      bottom: 0;
+      transition: transform 1s;
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
     h3 {
       font-weight: bold;
       font-size: 2.5rem;
       margin: 40px 0 0 0;
     }
+    .time-span {
+      margin: 0;
+    }
     p {
-      font-weight: normal;
-      max-width: 350px;
       text-align: right;
+    }
+    .description {
+      max-width: 350px;
+      font-weight: 100;
     }
     .bottom {
       position: absolute;
@@ -69,12 +91,56 @@
   .right {
     width: 50%;
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     margin-left: 50px;
     position: relative;
+    order: 2;
     img {
       max-height: 100%;
       position: absolute;
       bottom: 0;
+      transition: transform 1s;
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+    h3 {
+      font-weight: bold;
+      font-size: 2.5rem;
+      margin: 40px 0 0 0;
+    }
+    .time-span {
+      margin: 0;
+    }
+    p {
+      text-align: left;
+    }
+    .description {
+      max-width: 350px;
+      font-weight: 100;
+    }
+    .bottom {
+      position: absolute;
+      bottom: 25px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      button {
+        padding: 20px 80px;
+        background: #1DBB86;
+        margin-bottom: 15px;
+        &:hover {
+          background: darken(#1DBB86, 10%)
+        }
+      }
+      a {
+        font-weight: lighter;
+        font-size: 0.8rem;
+        i {
+          margin: 0 5px;
+        }
+      }
     }
   }
 
