--- a/app/scss/_recentProjects.scss
+++ b/app/scss/_recentProjects.scss
@@ -30,8 +30,48 @@
   height: 350px;
   width: 100%;
   position: relative;
-  padding-top: 50px;
+  padding-top: 75px;
   box-sizing: content-box;
+  .project-image {
+    max-height: 100%;
+    position: absolute;
+    bottom: 0;
+    transition: transform 1s;
+    z-index: 0;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+  h3 {
+    font-weight: bold;
+    font-size: 2.5rem;
+    margin: 40px 0 0 0;
+  }
+  .time-span {
+    margin: 0;
+  }
+  .description {
+    max-width: 350px;
+    font-weight: 100;
+  }
+  .bottom {
+    position: absolute;
+    bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    button {
+      padding: 20px 80px;
+      margin-bottom: 15px;
+    }
+    a {
+      font-weight: normal;
+      font-size: 0.8rem;
+      i {
+        margin: 0 5px;
+      }
+    }
+  }
   .left {
     display: flex;
     flex-direction: column;
@@ -40,53 +80,9 @@
     width: 50%;
     position: relative;
     order: 1;
-    img {
-      max-height: 100%;
-      position: absolute;
-      bottom: 0;
-      transition: transform 1s;
-      &:hover {
-        transform: scale(1.2);
-      }
-    }
-    h3 {
-      font-weight: bold;
-      font-size: 2.5rem;
-      margin: 40px 0 0 0;
-    }
-    .time-span {
-      margin: 0;
-    }
     p {
       text-align: right;
     }
-    .description {
-      max-width: 350px;
-      font-weight: 100;
-    }
-    .bottom {
-      position: absolute;
-      bottom: 25px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      button {
-        padding: 20px 80px;
-        background: #1DBB86;
-        margin-bottom: 15px;
-        &:hover {
-          background: darken(#1DBB86, 10%)
-        }
-      }
-      a {
-        font-weight: lighter;
-        font-size: 0.8rem;
-        i {
-          margin: 0 5px;
-        }
-      }
-    }
-
   }
   .right {
     width: 50%;
@@ -96,52 +92,12 @@
     margin-left: 50px;
     position: relative;
     order: 2;
-    img {
-      max-height: 100%;
-      position: absolute;
-      bottom: 0;
-      transition: transform 1s;
-      &:hover {
-        transform: scale(1.2);
-      }
-    }
-    h3 {
-      font-weight: bold;
-      font-size: 2.5rem;
-      margin: 40px 0 0 0;
-    }
-    .time-span {
-      margin: 0;
-    }
     p {
       text-align: left;
     }
-    .description {
-      max-width: 350px;
-      font-weight: 100;
-    }
-    .bottom {
-      position: absolute;
-      bottom: 25px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      button {
-        padding: 20px 80px;
-        background: #1DBB86;
-        margin-bottom: 15px;
-        &:hover {
-          background: darken(#1DBB86, 10%)
-        }
-      }
-      a {
-        font-weight: lighter;
-        font-size: 0.8rem;
-        i {
-          margin: 0 5px;
-        }
-      }
-    }
   }
+}
 
+.project:first-child {
+  padding-top: 50px;
 }
