--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -20,15 +20,15 @@ header {
     }
     .right {
       display: flex;
+      align-items: center;
       a {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 100px;
-        padding: 20px 0 0 0;
         margin-right: 20px;
+        padding: 10px 0;
         transition: border-color .3s;
-        border-bottom: 3px solid transparent;
+        border-bottom: 2px solid transparent;
         &:hover {
           cursor: pointer;
           border-bottom-color: #fff;
