added hover effect to email

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -9,4 +9,9 @@ footer {
   z-index: 100;
   position: absolute;
   bottom: -100px;
+  p {
+    a:hover {
+      text-decoration: underline;
+    }
+  }
 }
