--- a/app/scss/_recentProjects.scss
+++ b/app/scss/_recentProjects.scss
@@ -32,15 +32,20 @@
   position: relative;
   padding-top: 75px;
   box-sizing: content-box;
+  overflow: hidden;
   .project-image {
     max-height: 100%;
     position: absolute;
     bottom: 0;
     transition: transform 1s;
     z-index: 0;
+    opacity: 0;
     &:hover {
       transform: scale(1.1);
     }
+  }
+  .slide-up {
+    opacity: 1;
   }
   h3 {
     font-weight: bold;
@@ -100,4 +105,8 @@
 
 .project:first-child {
   padding-top: 50px;
+  .project-image {
+    animation: 500ms slideUp;
+    opacity: 1;
+  }
 }
