--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,6 +1,7 @@
 footer {
   height: 350px;
   width: 100%;
+  padding-top: 40px;
   background: #323B42;
   display: flex;
   justify-content: center;
@@ -11,7 +12,6 @@ footer {
   bottom: -350px;
   .container {
     height: 100%;
-    margin-top: 40px;
     width: 100%;
     max-width: 900px;
     display: flex;
