--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -18,6 +18,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     position: relative;
+    opacity: 0;
     .social-link {
       display: flex;
       flex-direction: column;
@@ -45,5 +46,8 @@ footer {
       top: 50%;
       transform: translate(-50%, -50%);
     }
+  }
+  .fade-in {
+    opacity: 1;
   }
 }
