--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -11,6 +11,9 @@ footer {
   z-index: 100;
   position: absolute;
   bottom: -350px;
+  h2 {
+    font-size: 3rem;
+  }
   .container {
     height: 100%;
     width: 100%;
@@ -25,6 +28,7 @@ footer {
       display: flex;
       flex-direction: column;
       align-items: center;
+      transition: color .3s;
       i {
         font-size: 4rem;
         max-height: 80px;
