--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,11 +5,12 @@
 @import "recentProjects";
 @import "footer";
 @import "resume";
+@import "caseStudy";
 
 
 body {
   font-family: 'Lato', sans-serif;
-  margin-bottom: 100px;
+  // margin-bottom: 100px;
 }
 
 * {
