--- a/app/scss/_caseStudy.scss
+++ b/app/scss/_caseStudy.scss
@@ -74,6 +74,33 @@
         margin: 5px 5px 5px 0;
       }
     }
+    .cta-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      a {
+        padding: 15px;
+        border-radius: 5px;
+        font-weight: 100;
+        margin-right: 20px;
+        width: 150px;
+        text-align: center;
+        i {
+          margin-right: 5px;
+        }
+      }
+      .back-btn {
+        border: 1px solid rgba(255,255,255,0.4);
+        transition: border-color .3s;
+        &:hover {
+          border-color: #fff;
+        }
+      }
+      a:last-child {
+        margin-right: 0;
+      }
+    }
+
   }
 
 
