--- a/app/scss/_caseStudy.scss
+++ b/app/scss/_caseStudy.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 80px 0 40px 0;
+  padding: 80px 40px 40px 40px;
   header {
     text-align: center;
     color: #fff;
@@ -100,8 +100,23 @@
         margin-right: 0;
       }
     }
-
   }
+}
 
-
+@media (max-width: 700px) {
+  .case-study {
+    main {
+      .wireframes {
+        .wireframes-container {
+          flex-direction: column;
+          .wireframe {
+            width: 100%;
+          }
+          .wireframe:first-child {
+            margin-bottom: 20px;
+          }
+        }
+      }
+    }
+  }
 }
