--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -25,11 +25,14 @@ footer {
     position: relative;
     opacity: 0;
     margin: 0 auto;
+    padding: 0 40px;
     .social-link {
       display: flex;
       flex-direction: column;
       align-items: center;
       transition: color .3s;
+      position: relative;
+      padding-bottom: 30px;
       i {
         font-size: 4rem;
         max-height: 80px;
@@ -38,6 +41,8 @@ footer {
         opacity: 0;
         transition: opacity .3s;
         margin: 10px 0;
+        position: absolute;
+        bottom: 0;
       }
       &:hover {
         color: $primary-color;
