--- a/app/scss/_caseStudy.scss
+++ b/app/scss/_caseStudy.scss
@@ -25,7 +25,7 @@
       margin-bottom: 70px;
       margin: 0 auto;
       border-radius: 14px;
-      padding: 2.5% 2.5%;
+      padding: 25px;
       img {
         width: 100%;
       }
