--- a/app/scss/_recentProjects.scss
+++ b/app/scss/_recentProjects.scss
@@ -86,7 +86,7 @@
       max-width: 65%;
       margin-bottom: -11%;
       border-radius: 14px;
-      padding: 2.5% 2.5%;
+      padding: 25px;
       img {
         max-width: 100%;
       }
