--- a/app/scss/_recentProjects.scss
+++ b/app/scss/_recentProjects.scss
@@ -87,6 +87,10 @@
       margin-bottom: -11%;
       border-radius: 14px;
       padding: 25px;
+      transition: transform 0.5s;
+      &:hover {
+        transform: scale(1.05);
+      }
       img {
         max-width: 100%;
       }
