Functional skills mosaic pattern

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -3,9 +3,11 @@
 @import "animations";
 @import "hero";
 @import "recentProjects";
+@import "skills";
 @import "footer";
 @import "resume";
 @import "caseStudy";
+
 
 
 body {
