Fixed inconsistent window width

--- a/app/scss/_skills.scss
+++ b/app/scss/_skills.scss
@@ -9,8 +9,11 @@
   background: linear-gradient(135deg,  #343a44 0%,#23272d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#343a44', endColorstr='#23272d',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   h2 {
-    margin: 0;
+    font-weight: bold;
+    font-size: 2rem;
     color: #fff;
+    margin: 0;
+    margin-top: 50px;
   }
   .skills-container {
     margin: 50px;
@@ -21,12 +24,27 @@
       .skill {
         width: 100px;
         margin: 0 5px -20px 5px;
+        position: relative;
+        &:hover::after {
+          content: attr(data-name);
+          position: absolute;
+          bottom: -25px;
+          left: 50%;
+          transform: translateX(-50%);
+          color: #fff;
+          z-index: 10;
+        }
         img {
           width: 100px;
-          transition: transform .5s;
+          transition: transform .5s, opacity .3s;
           &:hover {
             transform: scale(1.1);
           }
+        }
+      }
+      .unselected {
+        img {
+          opacity: 0.5;
         }
       }
     }
