Added currently exploring section

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4,6 +4,7 @@
 @import "hero";
 @import "recentProjects";
 @import "skills";
+@import "currentlyExploring";
 @import "footer";
 @import "resume";
 @import "caseStudy";
