--- a/app/scss/_currentlyExploring.scss
+++ b/app/scss/_currentlyExploring.scss
@@ -29,6 +29,10 @@
       width: 100px;
       height: 111px;
       margin-right: 20px;
+      transition: transform .5s;
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 }
