--- a/app/scss/_skills.scss
+++ b/app/scss/_skills.scss
@@ -32,7 +32,7 @@
           padding: 10px 20px;
           border-radius: 5px;
           bottom: -45px;
-          width: auto;
+          max-width: 100vw;
           left: 50%;
           transform: translateX(-50%);
           color: #fff;
