--- a/app/scss/_currentlyExploring.scss
+++ b/app/scss/_currentlyExploring.scss
@@ -36,3 +36,15 @@
     }
   }
 }
+
+@media (max-width: 550px) {
+  .currently-exploring {
+    flex-direction: column;
+    align-items: flex-start;
+    .right {
+      margin-top: 50px;
+      margin-left: 0;
+      align-self: flex-start;
+    }
+  }
+}
