changed currently exploring mobile position

--- a/app/scss/_currentlyExploring.scss
+++ b/app/scss/_currentlyExploring.scss
@@ -44,7 +44,7 @@
     .right {
       margin-top: 50px;
       margin-left: 0;
-      align-self: flex-start;
+      align-self: flex-end;
     }
   }
 }
