Add Machine Learning

--- a/app/scss/_currentlyExploring.scss
+++ b/app/scss/_currentlyExploring.scss
@@ -5,16 +5,16 @@
   // height: 250px;
   padding: 50px 50px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#00a5ff+0,7320ad+100 */
-  // background: #00a5ff; /* Old browsers */
-  // background: -moz-linear-gradient(-45deg,  #00a5ff 0%, #9600ff 100%); /* FF3.6-15 */
-  // background: -webkit-linear-gradient(-45deg,  #00a5ff 0%,#9600ff 100%); /* Chrome10-25,Safari5.1-6 */
-  // background: linear-gradient(135deg,  #00a5ff 0%,#9600ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a5ff', endColorstr='#9600ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   background: #00a5ff; /* Old browsers */
-  background: -moz-linear-gradient(-45deg,  #00a5ff 0%, #E72E30 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(-45deg,  #00a5ff 0%,#E72E30 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(135deg,  #00a5ff 0%,#E72E30 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a5ff', endColorstr='#E72E30',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background: -moz-linear-gradient(-45deg,  #00a5ff 0%, #9600ff 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg,  #00a5ff 0%,#9600ff 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg,  #00a5ff 0%,#9600ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a5ff', endColorstr='#9600ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  // background: #00a5ff; /* Old browsers */
+  // background: -moz-linear-gradient(-45deg,  #00a5ff 0%, #F57FA2 100%); /* FF3.6-15 */
+  // background: -webkit-linear-gradient(-45deg,  #00a5ff 0%,#F57FA2 100%); /* Chrome10-25,Safari5.1-6 */
+  // background: linear-gradient(135deg,  #00a5ff 0%,#F57FA2 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a5ff', endColorstr='#F57FA2',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   h2 {
     font-weight: bold;
     font-size: 2rem;
